Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-48915

Max checkpoint size computation large error on big clusters

    XMLWordPrintable

Details

    • Triaged
    • 1
    • Unknown
    • KV 2021-Oct-21

    Description

      cb::engine_errc KVBucket::setCheckpointMaxSize(size_t size) {
          if (size > 0) {
              checkpointMaxSize = size;
              return cb::engine_errc::success;
          }
       
          // Note: This is NOT perfect in the general case.
          // VBMap::getSize() returns the capacity of the VBMap, not the actual number
          // of vbuckets in the map. For perfect sizing we would need to recompute
          // at any vbmap size change (ie, bucket creation / deletion). @todo MB-48038
          const auto numVBuckets = vbMap.getSize();
          const auto& config = engine.getConfiguration();
          const auto checkpointQuota = config.getMaxSize() * checkpointMemoryRatio;
          const auto numCheckpointsPerVB = config.getMaxCheckpoints();
       
          Expects(numVBuckets > 0);
          Expects(numCheckpointsPerVB > 0);
          checkpointMaxSize = (checkpointQuota / numVBuckets) / numCheckpointsPerVB;
       
          return cb::engine_errc::success;
      }
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            paolo.cocchi Paolo Cocchi
            paolo.cocchi Paolo Cocchi
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty