engines/ep/src/vbucketmap.cc
@@ -16,15 +16,17 @@
 #include <memory>
 #include <vector>
 
-VBucketMap::VBucketMap(Configuration& config, KVBucket& store)
-    : size(config.getMaxVbuckets()) {
-    auto& engine = store.getEPEngine();
+VBucketMap::VBucketMap(KVBucket& bucket)
+    : size(bucket.getEPEngine().getConfiguration().getMaxVbuckets()),
+      bucket(bucket) {
+    auto& engine = bucket.getEPEngine();
     const auto numShards = engine.getWorkLoadPolicy().getNumShards();
     shards.resize(numShards);
     for (size_t shardId = 0; shardId < numShards; shardId++) {
         shards[shardId] = std::make_unique<KVShard>(engine, shardId);
     }
 
+    auto& config = engine.getConfiguration();
     config.addValueChangedListener(
             "hlc_drift_ahead_threshold_us",
             std::make_unique<VBucketConfigChangeListener>(*this));
@@ -44,7 +46,7 @@ VBucketPtr VBucketMap::getBucket(Vbid id) const {
 cb::engine_errc VBucketMap::addBucket(VBucketPtr vb) {
     if (vb->getId().get() < size) {
         getShardByVbId(vb->getId())->setBucket(vb);
-        ++vbStateCount[vb->getState() - vbucket_state_active];
+        incVBStateCount(vb->getState());
         EP_LOG_DEBUG("Mapped new {} in state {}",
                      vb->getId(),
                      VBucket::toString(vb->getState()));
@@ -57,6 +59,15 @@ cb::engine_errc VBucketMap::addBucket(VBucketPtr vb) {
 void VBucketMap::dropVBucketAndSetupDeferredDeletion(
         Vbid id, const CookieIface* cookie) {
     if (id.get() < size) {
+        // Note: Can't hold a shared_ptr copy when calling down to
+        // KVShard::dropVBucketAndSetupDeferredDeletion. See that function for
+        // details.
+        {
+            const auto vb = getBucket(id);
+            Expects(vb);
+            decVBStateCount(vb->getState());
+        }
+
         getShardByVbId(id)->dropVBucketAndSetupDeferredDeletion(id, cookie);
     }
 }
@@ -122,6 +133,26 @@ void VBucketMap::VBucketConfigChangeListener::sizeValueChanged(const std::string
     }
 }
 
+void VBucketMap::decVBStateCount(vbucket_state_t state) {
+    --vbStateCount[state - vbucket_state_active];
+
+    if (bucket.isCheckpointMaxSizeAutoConfig()) {
+        bucket.autoConfigCheckpointMaxSize();
+    }
+}
+
+void VBucketMap::incVBStateCount(vbucket_state_t state) {
+    ++vbStateCount[state - vbucket_state_active];
+
+    if (bucket.isCheckpointMaxSizeAutoConfig()) {
+        bucket.autoConfigCheckpointMaxSize();
+    }
+}
+
+uint16_t VBucketMap::getVBStateCount(vbucket_state_t state) const {
+    return vbStateCount[state - vbucket_state_active];
+}
+
 vbucket_state_t VBucketMap::setState(VBucket& vb,
                                      vbucket_state_t newState,
                                      const nlohmann::json* meta) {
@@ -141,4 +172,16 @@ vbucket_state_t VBucketMap::setState_UNLOCKED(
     incVBStateCount(newState);
 
     return oldState;
+}
+
+size_t VBucketMap::getNumAliveVBuckets() const {
+    size_t res = 0;
+    // Note: We don't account vbucket_state_dead as that identifies VBucket
+    // objects set-up for deferred deletion on disk but that have already been
+    // destroyed in memory.
+    for (const auto state :
+         {vbucket_state_active, vbucket_state_replica, vbucket_state_pending}) {
+        res += getVBStateCount(state);
+    }
+    return res;
 }
